c4prj2_input/grade.txt
Grading at Sun Aug  9 10:26:35 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:18:46: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘n_decks’
     fc->decks = realloc(fc->decks, (fc->decks->n_decks) * sizeof(*fc->decks));
                                              ^
future.c: At top level:
future.c:28:43: error: unknown type name ‘future_card_t’
 void future_cards_from_deck(deck_t *deck, future_card_t *fc) {
                                           ^
Compilation of future.c failed

Overall Grade: F
